Login cover set to fixed, so it covers properly

--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -235,29 +235,32 @@ The view project.
 
 .login-cover{
   background:rgba(33,150,243,1) ;
-  position:absolute;
+  position:fixed;
   top:0;
+  right:0;
+  bottom:0;
   height:100%;
   width:100%;
   left:0;
+  background-size:100%;
 }
 
 .login-cover h1{
-  font-size:1.7em;
+  font-size:1.5em;
   font-weight:600;
   font-family: 'Open Sans', sans-serif;
   color:rgba(255,255,255,0.9);
 }
 
 .login-cover h2{
-  font-size:1.4em;
+  font-size:1.3em;
   font-weight:500;
   font-family: 'Open Sans', sans-serif;
   color:rgba(255,255,255,0.8);
 }
 
 .login-cover h3{
-  font-size:1.1em;
+  font-size:1em;
   font-weight:500;
   font-family: 'Open Sans', sans-serif;
   color:rgba(255,255,255,0.8);
